--- a/cunhanta/src/components/Header.css
+++ b/cunhanta/src/components/Header.css
@@ -1,64 +1,162 @@
-.format{
+.inicio {
     display: flex;
-    background-color: #fff;
-    width: 100%;
-    height: 75px;
     border-bottom: 1px solid #FBFBFB;
-}
-
-input {
-    width: 713px;
-    height: 49px;
-    border-radius: 10px;
-    border: 1px solid #AFAFAF;
-    background: #FFF;
-    color: #868686;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    background-color: #FFF;
+    width: 100%;
+    height: 76px;
+    align-items: center;
 }
 
 .logo {
     width: 132px;
     height: 50px;
+    margin-left: 82px;
+    margin-right: 187px;
+}
+
+input {
+    width: 667px;
+    height: 46px;
+    border-radius: 6px;
+    border: 1px solid #BABABA;
+    opacity: 0.6;
+    background-color: #FFF;
+    color: #808080;
+    font-family: 'Mulish';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    padding-left: 25px;
+}
+
+.procurar {
+    position: relative;
+    margin-right: 120px;
+}
+.lupa img {
+    width: 22px;
+    height: 22px;
+    opacity: 50%;
+}
+
+.lupa {
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 12px;
+    right: 22px;
 }
 
 .login {
-    font-size: 22px;
+    width: 103px;
+    height: 36px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #FE9600;
+    color: #FFF;
+    font-family: 'Noto Sans';
+    font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    background-color: #fff;
     border: none;
+    margin-right: 22px;
 }
 
 .cadastro {
-    width: 178px;
-    height: 48px;
-    border-radius: 8px;
-    background: #FE9600;
-    color: #FFF;
-    font-size: 22px;
+    width: 118px;
+    height: 27.418px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: 'Noto Sans';
+    font-size: 20px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
     border: none;
-    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+    background-color: #FFF;
+    margin-right: 82px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* width: 1536px; */
+    height: 45.733px;
+    flex-shrink: 0;
+    background: #FFF;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.05);
 }
 
 ul {
-    list-style: none;
-    padding: 0; 
-    margin: 0; 
-}
-
-.nav {
     display: flex;
-    justify-content: center;
-    gap: 167px;
+    list-style: none;
+    gap: 124px;
+    color: #000;
+    font-family: 'Noto Sans';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .container {
-    display: flex;
+    padding-left: 81px;
+    position: relative;
+    background: #ffffff;
+    height: 530px;
+    margin-top: 1.5px;
+    margin-bottom: 19px;
+    padding-top: 97px;
+}
+
+.container h1 {
+    width: 761px;
+    height: 75px;
+    color: #000;
+    font-family: 'Mulish';
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 41px;
+}
+
+.container p {
+    width: 677px;
+    height: 46px;
+    color: #000;
+    font-family: 'Mulish';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 66px;
+}
+
+.container button {
+    width: 307px;
+    height: 65.439px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #FE9600;
+    color: #FFF;
+    font-family: 'Noto Sans';
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border: none;
+}
+
+
+.container img {
+    position: absolute;
+    width: 667.729px;
+    height: 494px;
+    flex-shrink: 0;
+    right: 69.56px;
+    top: 0; 
 }
