--- a/cunhanta/src/components/Header.css
+++ b/cunhanta/src/components/Header.css
@@ -12,6 +12,16 @@
     height: 50px;
     margin-left: 82px;
     margin-right: 187px;
+    animation: flipTitle 0.5s;
+}
+
+@keyframes flipTitle {
+    from{
+        transform: rotateX(90deg);
+    }
+    to{
+        transform: rotateX(0deg);
+    }
 }
 
 input {
@@ -49,7 +59,7 @@ input {
 }
 
 .login {
-    width: 103px;
+    width: 115px;
     height: 36px;
     flex-shrink: 0;
     border-radius: 5px;
@@ -61,7 +71,7 @@ input {
     font-weight: 700;
     line-height: normal;
     border: none;
-    margin-right: 22px;
+    margin-right: 24px;
 }
 
 .cadastro {
@@ -154,9 +164,10 @@ ul {
 
 .container img {
     position: absolute;
-    width: 667.729px;
-    height: 494px;
+    width: 720.73px;
+    height: 498px;
     flex-shrink: 0;
     right: 69.56px;
     top: 0; 
+
 }
