--- a/cunhanta/src/components/Continuar.css
+++ b/cunhanta/src/components/Continuar.css
@@ -21,6 +21,7 @@
 
 .container_continuar .carousel {
     width: 100%;
+    height: 100%;
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
