--- a/cunhanta/src/components/Shorts.css
+++ b/cunhanta/src/components/Shorts.css
@@ -20,6 +20,7 @@
 
 .container_shorts .carousel {
     width: 100%;
+    height: 100%;
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
