--- a/cunhanta/src/index.css
+++ b/cunhanta/src/index.css
@@ -11,6 +11,32 @@ button:focus {
   outline: none;
 }
 
+.section {
+  background-color: #F8F8F8;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section .div {
+  width: 451px;
+  height: 608px;
+  flex-shrink: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 40px;
+  background-color: #FFF;
+  box-shadow: 0px 4px 35px 0px rgba(0, 0, 0, 0.08);
+  padding: 62px 73px;
+}
+
+
 
 
 
