--- a/cunhanta/src/pages/Home.css
+++ b/cunhanta/src/pages/Home.css
@@ -4,7 +4,7 @@
   width: 1519px;
 }
 
-.container_continuar + {
+.container_continuar {
   margin-bottom: 7px;
 }
 
@@ -42,3 +42,160 @@ footer img {
   margin-left: 41px;
   
 }
+
+
+
+
+.container_ {
+  position: relative;
+  height: 353px;
+  flex-shrink: 0;
+  background-color: #FFF;
+  margin-left: 47px;
+  padding: 19px 0 11px 22px;
+  margin-bottom: 7px;
+}
+
+.nome_secao {
+  width: 130px;
+  color: #000;
+  font-family: 'Mulish';
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  margin-bottom: 17px;
+}
+
+.carousel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  gap: 8px;
+}
+
+.carousel::-webkit-scrollbar {
+  display: none;
+} 
+
+.carousel .item {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 356px;
+  height: 273px;
+}
+
+.carousel .item .image {
+  width: 356px;
+  height: 200px;
+}
+
+.carousel .item .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.carousel .item .info {
+  position: relative;
+  margin: 5px 4px 0 10px;
+}
+
+.carousel .item .info h1 {
+  color: #000;
+  font-family: 'Noto Sans';
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  width: 336px;
+  height: 27px;
+  margin: 0;
+}
+
+.carousel .item .info h2 {
+  color: #D3D3D3;
+  font-family: 'Noto Sans';
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  width: 177px;
+}
+
+.carousel .item .info div {
+  position: absolute;
+  display: flex;
+  top: 45px;
+  right: 0;
+}
+
+.carousel .item .info div .level_img {
+  width: 15px;
+  height: 12.857px;
+  flex-shrink: 0;
+  flex-shrink: 0;
+  margin-right: 4px;
+}
+
+.carousel .item .info div .level {
+  color: #202020;
+  font-family: 'Noto Sans';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-right: 7px;
+}
+
+.carousel .item .info div .clock_img {
+  width: 13px;
+  height: 13px;
+  flex-shrink: 0;
+  margin-top: 1px;
+  margin-right: 4px;
+}
+
+.carousel .item .info div .duration {
+  color: #202020;
+  font-family: 'Noto Sans';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.buttons {
+  position: absolute;
+  top: 150px;
+  border: none;
+}
+
+.buttons button:hover {
+  opacity: 40%;
+}
+
+.buttons button {
+  background-color: transparent;
+  border: none;
+  cursor: grab;
+  opacity: 30%;
+  outline: 'none';
+}
+
+.buttons button:active {
+  cursor: grabbing;
+}
+
+.buttons button:first-child {
+  margin-left: 9px;
+  visibility: visible;
+}
+
+.buttons button:last-child  {
+  margin-left: 1330px;
+}
+
